feat(web): add web-core/web-testkit/runtime-support deps to web modules + port runtime-support
Stage E batch 2 web module dependency patches.
- ddd4j-web-webflux/pom.xml: added ddd4j-web-core, ddd4j-runtime-support, spring-context deps
- ddd4j-web-webmvc/pom.xml: same
- ddd4j-runtime-support: ported from 3.0.x (List.of/copyOf→Collections/JDK8)
- web-webmvc/webflux source port deferred to dedicated batch (Spring 5.3 API surface verification needed)

Note: web-webmvc (53 files) and web-webflux (18 files) have
imports that require Spring Framework 5.3.39 (not 5.3.25 from test stack) and JDK8
bytecode-compatible Spring Context 6→5.3 API migration. Deferred to separate focused batch.